--- a/views/admin/pages/product/create.view.ejs
+++ b/views/admin/pages/product/create.view.ejs
@@ -196,7 +196,7 @@
                 </div>
               </div>
 
-              <div class="col-12">
+              <div class="col-lg-6 col-md-6 col-12">
                 <div class="form-group mb-4">
                   <label for="" class="d-block"
                     ><span class="text-danger"><b>*</b></span> Trạng thái</label
@@ -218,6 +218,31 @@
                     id="status-inactive"
                   />
                   <label for="status-inactive">Ngừng hoạt động</label>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-md-6 col-6">
+                <div class="form-group mb-4">
+                  <label for="" class="d-block"
+                    ><span class="text-danger"><b>*</b></span> Nổi bật</label
+                  >
+                  <input
+                    type="radio"
+                    name="featured"
+                    value="1"
+                    class="form-check-input bg-success"
+                    id="featured1"
+                  />
+                  <label for="featured1" class="me-4">Có</label>
+                  <input
+                    type="radio"
+                    name="featured"
+                    value="0"
+                    checked
+                    class="form-check-input bg-warning"
+                    id="featured0"
+                  />
+                  <label for="featured0">Ko</label>
                 </div>
               </div>
             </div>
