--- a/views/admin/pages/product/update.view.ejs
+++ b/views/admin/pages/product/update.view.ejs
@@ -206,7 +206,7 @@
                 </div>
               </div>
 
-              <div class="col-12">
+              <div class="col-lg-6 col-md-6 col-6">
                 <div class="form-group mb-4">
                   <label for="" class="d-block">Trạng thái</label>
                   <input type="radio" name="status" value="active" <% if(product.status ===
@@ -218,6 +218,20 @@
                   'inactive') {%> checked <% } %> class="form-check-input bg-warning"
                   id="status-inactive" />
                   <label for="status-inactive">Ngừng hoạt động</label>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-md-6 col-6">
+                <div class="form-group mb-4">
+                  <label for="" class="d-block"
+                    ><span class="text-danger"><b>*</b></span> Nổi bật</label
+                  >
+                  <input type="radio" name="featured" value="1" class="form-check-input bg-success"
+                  id="featured1" <% if(product.featured=== '1') {%> checked <% } %> />
+                  <label for="featured1" class="me-4">Có</label>
+                  <input type="radio" name="featured" value="0" class="form-check-input bg-warning"
+                  id="featured0" <% if(product.featured === '0') {%> checked <% } %> />
+                  <label for="featured0">Ko</label>
                 </div>
               </div>
             </div>
