--- a/views/client/partials/footer.view.ejs
+++ b/views/client/partials/footer.view.ejs
@@ -153,6 +153,11 @@
                   <img src="/client/images/payment/ZALO-payment.jpg" alt="ZALO" />
                 </div>
               </li>
+              <li class="payment__method-item">
+                <div class="payment__method-box">
+                  <img src="/client/images/payment/MOMO-payment.jpg" alt="MOMO" />
+                </div>
+              </li>
             </ul>
           </div>
         </div>
