--- a/views/client/partials/selecttree.view.ejs
+++ b/views/client/partials/selecttree.view.ejs
@@ -1,7 +1,9 @@
 <ul class="navheader-list-dropdown">
   <% categoryListTree.forEach(category => { %>
   <li class="navheader-menu-item">
-    <a href="" class="navheader-menu-link nav-link"><%= category.title %></a>
+    <a href="/products/categories/<%= category.slug %>" class="navheader-menu-link nav-link"
+      ><%= category.title %></a
+    >
     <% if(category.children && category.children.length > 0) {%> <%-
     include("./selecttree.view.ejs", { categoryListTree: category.children, level: level + 1}) %> <%
     } %>
