--- a/public/client/styles/pages/product/product.css
+++ b/public/client/styles/pages/product/product.css
@@ -72,9 +72,39 @@
 .card__bg .card__image {
   width: 100%;
   aspect-ratio: 3/3;
+  position: relative;
+  overflow: hidden;
 }
 .card__bg .card__image .card__thumbnail {
   object-fit: cover;
+  position: absolute;
+  z-index: 499;
+}
+.card__bg .card__image .card__link {
+  width: 100%;
+  height: 100%;
+  background: #0000009e;
+  object-fit: cover;
+  position: absolute;
+  z-index: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(-101%);
+  transition: 0.3s ease-out;
+}
+.card__bg:hover .card__image .card__link {
+  transform: translateY(0%);
+}
+.card__bg .card__image .card__link .card__link-detail {
+  display: block;
+  text-decoration: none;
+  color: var(--primary-color);
+  padding: var(--padding-button);
+  border: var(--border-thickness-button) solid var(--primary-color);
+}
+.card__bg .card__image .card__link .card__link-detail:hover {
+  text-decoration: underline;
 }
 .card__bg .card__box {
   margin: 3px 0px;
