--- a/views/client/partials/header.view.ejs
+++ b/views/client/partials/header.view.ejs
@@ -105,7 +105,7 @@
           </li>
           <li class="navheader-menu-item">
             <% const pathCategory = "/categories" %>
-            <a href="<%= pathCategory %>" class="navheader-menu-link nav-link"
+            <a href="#" class="navheader-menu-link nav-link"
               >Thể loại <i class="bx bx-chevron-down"></i
             ></a>
             <%- include("./selecttree.view.ejs", { categoryListTree: categoryTree, level: 1}) %>
