--- a/views/client/pages/home/index.view.ejs
+++ b/views/client/pages/home/index.view.ejs
@@ -185,7 +185,9 @@
                       class="card__thumbnail"
                     />
                     <div class="card__link">
-                      <a href="/products/detail/<%= product.slug %>" class="content-font card__link-detail"
+                      <a
+                        href="/products/detail/<%= product.slug %>"
+                        class="content-font card__link-detail"
                         >Xem chi tiết</a
                       >
                     </div>
@@ -259,7 +261,9 @@
                       class="card__thumbnail"
                     />
                     <div class="card__link">
-                      <a href="/products/detail/<%= product.slug %>" class="content-font card__link-detail"
+                      <a
+                        href="/products/detail/<%= product.slug %>"
+                        class="content-font card__link-detail"
                         >Xem chi tiết</a
                       >
                     </div>
