--- a/views/client/partials/header.view.ejs
+++ b/views/client/partials/header.view.ejs
@@ -29,10 +29,10 @@
       </div>
 
       <div class="col-lg-6 col-12 header-search">
-        <form method="" action="" class="header-search-box mt-2">
+        <form method="GET" action="/products" id="form-search" class="header-search-box mt-2">
           <input
             type="text"
-            name="search"
+            name="keyword"
             placeholder="Nhập từ khóa..."
             class="header-search-inp"
           />
